--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,13 +34,13 @@ if (TR_DEBUG)
 	target_compile_definitions(Bodge PRIVATE TR_DEBUG)
 endif ()
 if ((CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND NOT (CMAKE_CXX_SIMULATE_ID STREQUAL "MSVC")) OR CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-	target_compile_options (tr-utility PRIVATE -Wall -Wextra -Wpedantic)
-	target_compile_options (tr-utility PRIVATE -fno-trapping-math -fno-math-errno -fno-signed-zeros -fassociative-math -ffp-contract=fast)
+	target_compile_options (Bodge PRIVATE -Wall -Wextra -Wpedantic)
+	target_compile_options (Bodge PRIVATE -fno-trapping-math -fno-math-errno -fno-signed-zeros -fassociative-math -ffp-contract=fast)
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND CMAKE_CXX_SIMULATE_ID STREQUAL "MSVC")
-	target_compile_options (tr-utility PRIVATE /clang:-Wall /clang:-Wextra /clang:-Wpedantic)
-	target_compile_options (tr-utility PRIVATE /clang:-fno-trapping-math /clang:-fno-math-errno /clang:-fno-signed-zeros /clang:-fassociative-math /clang:-ffp-contract=fast)
+	target_compile_options (Bodge PRIVATE /clang:-Wall /clang:-Wextra /clang:-Wpedantic)
+	target_compile_options (Bodge PRIVATE /clang:-fno-trapping-math /clang:-fno-math-errno /clang:-fno-signed-zeros /clang:-fassociative-math /clang:-ffp-contract=fast)
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-	target_compile_options(tr-utility PUBLIC /Zc:preprocessor /W3 /WX)
+	target_compile_options(Bodge PUBLIC /Zc:preprocessor /W3 /WX)
 endif ()
 target_link_libraries(Bodge tr::sysgfx tr::audio)
 target_precompile_headers (Bodge PRIVATE <tr/utility.hpp>)
