--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ FetchContent_MakeAvailable(tr)
 add_executable(
     Bodge
     src/main.cpp
-    src/audio.cpp src/blur_renderer.cpp src/engine.cpp src/fonts.cpp src/tooltip.cpp
+    src/audio.cpp src/blur_renderer.cpp src/fonts.cpp src/graphics.cpp src/system.cpp src/tooltip_manager.cpp
     src/game/ball.cpp src/game/game.cpp src/game/player.cpp src/game/trail.cpp
     src/state/ball_settings_editor_state.cpp src/state/game_over_state.cpp src/state/game_state.cpp src/state/gamemode_designer_state.cpp
         src/state/name_entry_state.cpp src/state/pause_state.cpp src/state/player_settings_editor_state.cpp src/state/replays_state.cpp
@@ -27,10 +27,10 @@ if (TR_ENABLE_ASSERTS)
 	target_compile_definitions(Bodge PRIVATE TR_ENABLE_ASSERTS)
 endif ()
 if ((CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND NOT (CMAKE_CXX_SIMULATE_ID STREQUAL "MSVC")) OR CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-	target_compile_options (Bodge PRIVATE -Wall -Wextra -Wpedantic)
+	target_compile_options (Bodge PRIVATE -Wall -Wextra -Wpedantic -Wshadow)
 	target_compile_options (Bodge PRIVATE -fno-trapping-math -fno-math-errno -fno-signed-zeros -fassociative-math -ffp-contract=fast)
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND CMAKE_CXX_SIMULATE_ID STREQUAL "MSVC")
-	target_compile_options (Bodge PRIVATE /clang:-Wall /clang:-Wextra /clang:-Wpedantic)
+	target_compile_options (Bodge PRIVATE /clang:-Wall /clang:-Wextra /clang:-Wpedantic /clang:-Wshadow)
 	target_compile_options (Bodge PRIVATE /clang:-fno-trapping-math /clang:-fno-math-errno /clang:-fno-signed-zeros /clang:-fassociative-math /clang:-ffp-contract=fast)
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
 	target_compile_options(Bodge PUBLIC /Zc:preprocessor /W3 /WX)
