--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,8 +18,9 @@ add_executable(
     src/state/ball_settings_editor_state.cpp src/state/credits_state.cpp src/state/game_over_state.cpp src/state/game_state.cpp
         src/state/gamemode_designer_state.cpp src/state/name_entry_state.cpp src/state/pause_state.cpp src/state/player_settings_editor_state.cpp
         src/state/replays_state.cpp src/state/save_score_state.cpp src/state/save_replay_state.cpp src/state/scoreboards_state.cpp src/state/settings_state.cpp
-        src/state/state.cpp src/state/start_game_state.cpp src/state/title_state.cpp
-    src/ui/ui_manager.cpp src/ui/widget_base.cpp src/ui/widget.cpp
+        src/state/state_base.cpp src/state/start_game_state.cpp src/state/title_state.cpp
+    src/ui/arrow_widget.cpp src/ui/color_preview_widget.cpp src/ui/image_widget.cpp src/ui/label_widget.cpp src/ui/replay_playback_indicator_widget.cpp
+        src/ui/replay_score_widget.cpp src/ui/text_button_widget.cpp src/ui/ui_manager.cpp src/ui/widget_base.cpp
     src/gamemode.cpp src/global.cpp src/localization.cpp src/replay.cpp src/score.cpp src/settings.cpp
 )
 target_compile_features(Bodge PUBLIC cxx_std_20)
