--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 3.30.0)
-project(Bodge VERSION 1.0.1 LANGUAGES C CXX)
+project(Bodge VERSION 1.1.0 LANGUAGES C CXX)
 
 include(FetchContent)
 
 FetchContent_Declare(
 	tr
 	GIT_REPOSITORY	https://TRDario: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@github.com/TRDario/tr.git
-    GIT_TAG v1.0.1
+    GIT_TAG origin/main
 ) 
 FetchContent_MakeAvailable(tr)
 include(${tr_SOURCE_DIR}/check_compiler.cmake)
@@ -15,14 +15,14 @@ add_executable(
     Bodge
     src/main.cpp
     src/audio.cpp src/blur_renderer.cpp src/fonts.cpp src/graphics.cpp src/system.cpp src/tooltip_manager.cpp
-    src/game/ball.cpp src/game/game.cpp src/game/player.cpp src/game/trail.cpp
+    src/game/ball.cpp src/game/game.cpp src/game/life_fragment.cpp src/game/player.cpp src/game/trail.cpp
     src/state/ball_settings_editor_state.cpp src/state/credits_state.cpp src/state/game_over_state.cpp src/state/game_state.cpp
         src/state/gamemode_designer_state.cpp src/state/name_entry_state.cpp src/state/pause_state.cpp src/state/player_settings_editor_state.cpp
         src/state/replays_state.cpp src/state/save_score_state.cpp src/state/save_replay_state.cpp src/state/scoreboards_state.cpp src/state/settings_state.cpp
         src/state/state_base.cpp src/state/start_game_state.cpp src/state/title_state.cpp
     src/ui/arrow_widget.cpp src/ui/color_preview_widget.cpp src/ui/image_widget.cpp src/ui/label_widget.cpp src/ui/replay_playback_indicator_widget.cpp
         src/ui/replay_score_widget.cpp src/ui/text_button_widget.cpp src/ui/ui_manager.cpp src/ui/widget_base.cpp
-    src/gamemode.cpp src/global.cpp src/localization.cpp src/replay.cpp src/score.cpp src/settings.cpp
+    src/gamemode.cpp src/legacy_formats.cpp src/global.cpp src/localization.cpp src/replay.cpp src/score.cpp src/settings.cpp
 )
 tr_target_template(Bodge)
 target_link_libraries(Bodge tr::tr)
@@ -33,7 +33,7 @@ target_precompile_headers(Bodge PRIVATE <tr/utility.hpp>)
 if(WIN32)
     target_sources(Bodge PRIVATE metadata/icon.rc)
 elseif(TR_HAS_CLANG)
-    target_link_options(Bodge PRIVATE -s)
+    target_link_options(Bodge PRIVATE $<IF:$<CONFIG:Release>,-s,>)
 endif()
 
 # Copying to 'final' if Release.
