--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,17 +12,51 @@ FetchContent_MakeAvailable(tr)
 
 add_executable(
     Bodge
+    src/audio.cpp
+    src/fonts.cpp
+    src/game/ball.cpp
+    src/game/game.cpp
+    src/game/life_fragment.cpp
+    src/game/player.cpp
+    src/game/trail.cpp
+    src/gamemode.cpp
+    src/global.cpp
+    src/graphics/blur_renderer.cpp
+    src/graphics/graphics.cpp
+    src/graphics/tooltip_manager.cpp
+    src/localization.cpp
     src/main.cpp
-    src/audio.cpp src/blur_renderer.cpp src/fonts.cpp src/graphics.cpp src/system.cpp src/tooltip_manager.cpp
-    src/game/ball.cpp src/game/game.cpp src/game/life_fragment.cpp src/game/player.cpp src/game/trail.cpp
-    src/state/ball_settings_editor_state.cpp src/state/credits_state.cpp src/state/game_over_state.cpp src/state/game_state.cpp
-        src/state/gamemode_designer_state.cpp src/state/name_entry_state.cpp src/state/pause_state.cpp src/state/player_settings_editor_state.cpp
-        src/state/replays_state.cpp src/state/save_score_state.cpp src/state/save_replay_state.cpp src/state/scoreboard_selection_state.cpp
-        src/state/scoreboard_state.cpp src/state/settings_state.cpp src/state/state_base.cpp src/state/start_game_state.cpp src/state/title_state.cpp
-    src/ui/arrow_widget.cpp src/ui/color_preview_widget.cpp src/ui/image_widget.cpp src/ui/label_widget.cpp src/ui/replay_playback_indicator_widget.cpp
-        src/ui/replay_score_widget.cpp src/ui/text_button_widget.cpp src/ui/ui_manager.cpp src/ui/widget_base.cpp
-    src/gamemode.cpp src/legacy_formats.cpp src/global.cpp src/localization.cpp src/replay.cpp src/score.cpp src/settings.cpp
+    src/replay.cpp
+    src/score.cpp
+    src/settings.cpp
+    src/state/ball_settings_editor_state.cpp
+    src/state/credits_state.cpp
+    src/state/game_over_state.cpp
+    src/state/game_state.cpp
+    src/state/gamemode_designer_state.cpp
+    src/state/name_entry_state.cpp
+    src/state/pause_state.cpp
+    src/state/player_settings_editor_state.cpp
+    src/state/replays_state.cpp
+    src/state/save_score_state.cpp
+    src/state/save_replay_state.cpp
+    src/state/scoreboard_selection_state.cpp
+    src/state/scoreboard_state.cpp
+    src/state/settings_state.cpp
+    src/state/state_base.cpp
+    src/state/start_game_state.cpp
+    src/state/title_state.cpp
+    src/ui/arrow_widget.cpp
+    src/ui/color_preview_widget.cpp
+    src/ui/image_widget.cpp
+    src/ui/label_widget.cpp
+    src/ui/replay_playback_indicator_widget.cpp
+    src/ui/replay_score_widget.cpp
+    src/ui/text_button_widget.cpp
+    src/ui/ui_manager.cpp
+    src/ui/widget_base.cpp  
 )
+target_compile_definitions(Bodge PRIVATE VERSION_STRING="v${Bodge_VERSION}")
 tr_target_template(Bodge)
 target_link_libraries(Bodge tr::tr)
 target_precompile_headers(Bodge PRIVATE <tr/utility.hpp>)
