--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -4,12 +4,10 @@
       "name": "x64-Debug",
       "generator": "Ninja",
       "configurationType": "Debug",
-      "inheritEnvironments": [
-        "clang_cl_x64"
-      ],
+      "inheritEnvironments": [ "clang_cl_x64" ],
       "buildRoot": "${projectDir}\\out\\build\\${name}",
       "installRoot": "${projectDir}\\out\\install\\${name}",
-      "cmakeCommandArgs": "-DTR_ENABLE_ASSERTS=1",
+      "cmakeCommandArgs": "-DTR_ENABLE_ASSERTS=1 -DCMAKE_POLICY_VERSION_MINIMUM=3.5",
       "ctestCommandArgs": ""
     },
     {
@@ -18,12 +16,10 @@
       "configurationType": "Release",
       "buildRoot": "${projectDir}\\out\\build\\${name}",
       "installRoot": "${projectDir}\\out\\install\\${name}",
-      "cmakeCommandArgs": "",
+      "cmakeCommandArgs": "-DCMAKE_POLICY_VERSION_MINIMUM=3.5",
       "buildCommandArgs": "",
       "ctestCommandArgs": "",
-      "inheritEnvironments": [
-        "clang_cl_x64"
-      ]
+      "inheritEnvironments": [ "clang_cl_x64" ]
     },
     {
       "name": "x64-RelWithDebInfo",
@@ -31,12 +27,10 @@
       "configurationType": "RelWithDebInfo",
       "buildRoot": "${projectDir}\\out\\build\\${name}",
       "installRoot": "${projectDir}\\out\\install\\${name}",
-      "cmakeCommandArgs": "-DTR_ENABLE_ASSERTS=1",
+      "cmakeCommandArgs": "-DTR_ENABLE_ASSERTS=1 -DCMAKE_POLICY_VERSION_MINIMUM=3.5",
       "buildCommandArgs": "",
       "ctestCommandArgs": "",
-      "inheritEnvironments": [
-        "clang_cl_x64_x64"
-      ]
+      "inheritEnvironments": [ "clang_cl_x64_x64" ]
     }
   ]
 }
