--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,7 @@ project(Bodge VERSION 1.2.0 LANGUAGES C CXX)
 
 include(FetchContent)
 
-FetchContent_Declare(
-	tr
-	GIT_REPOSITORY	https://github.com/TRDario/tr.git
-    GIT_TAG v1.1.0
-) 
+FetchContent_Declare(tr GIT_REPOSITORY https://github.com/TRDario/tr.git GIT_TAG v1.1.0)
 FetchContent_MakeAvailable(tr)
 
 add_executable(
